--- a/_plays/06.md
+++ b/_plays/06.md
@@ -11,6 +11,6 @@ Es de relevancia asegurar la validez del archivo exportado, ya que de no ser vá
 
 #### checklist
 1. Exporta datos en archivos estáticos tabulares.
-2. Convierte los archivos a formatos abiertos (CSV).
+2. Convierte los archivos a formatos abiertos [CSV](http://es.wikipedia.org/wiki/CSV).
 3. Asegura la validez del formato y estructura del archivo.
 
