--- a/_plays/07.md
+++ b/_plays/07.md
@@ -3,9 +3,9 @@ id: 7
 title: Publica los datos en línea
 ---
 
-Los conjuntos de datos deben estar a un clic de distancia de los usuarios. Esto quiere decir que se deben evitar cualquier barrera para el acceso, como el uso de contraseñas o interfaces de usuario "interactivas". Debemos considerar que será también software el que consuma estos datos en línea, no sólo humanos.
+Los conjuntos de datos deben estar a un clic de distancia de los usuarios. Por esto, se debe evitar cualquier barrera de acceso, como el uso de contraseñas o interfaces de usuario "interactivas". Debemos considerar que será también el software el que consuma estos datos en línea, no sólo humanos.
 
-Cargar los conjuntos de datos abiertos en un servidor web, ya sea el mismo portal en línea con el que se cuente, o servidores de archivos propios o en la nube. Se recomienda cargar los archivos (o hacer referencia) en la sección de datos abiertos en la pestaña de Transparencia Focalizada o en la dirección www.institucion.gob.mx/datos
+Para lo anterior, se recomeienda cargar los conjuntos de datos abiertos en un servidor web, ya sea el mismo portal en línea con el que se cuente, o servidores de archivos propios o en la nube. Se recomienda cargar las ligas descargables a los archivos (o hacer referencia) en la sección de datos abiertos en la pestaña de Transparencia Focalizada o en la dirección www.institucion.gob.mx/datos.
 
 #### checklist
 1. Haz disponibles los datos en línea para descarga.
