Translate checklist to actividades

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -10,7 +10,7 @@ Se comenzará por designar a los dos funcionarios responsables de dar cumplimien
 
 Estos servidores públicos serán encargados de coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
 
-#### checklist
+#### actividades
 1. Designa un enlace institucional
 2. Designa un administrador de datos abiertos
 3. Envia un oficio con la designación a la Estrategia Digital Nacional,
