--- a/_plays/02.md
+++ b/_plays/02.md
@@ -7,7 +7,7 @@ El inventario general de datos permite a la institución saber con qué activos 
 
 Es importante a que se inicie un versionamiento del Inventario General de Datos de la entidad. En la primera iteración se debe apuntar a tener un ejercicio exhaustivo, que se irá incrementando y perfeccionando de manera gradual.
 
-#### checklist
+#### actividades
 1. Pide un [Inventario General de Datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas.
 2. Consolida la información recolectada en un solo archivo, siguiendo
    [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
