--- a/_plays/03.md
+++ b/_plays/03.md
@@ -10,7 +10,7 @@ La priorizacion de Datos Abiertos está ligada al valor que se puede extraer de 
 * Aquellos datos que se sepa son de alto valor para los sectores interesados, ligados a la institución.
 * Aquellos datos ligados o recomendados por la Infraestructura Estratégica de Datos Abiertos.
 
-#### checklist
+#### actividades
 1. Elabora reporte de datos más solicitados con la Unidad de
    Transparencia.
 2. Sesiona el Comité Institucional de Datos Abiertos para priorizar los
