--- a/_plays/07.md
+++ b/_plays/07.md
@@ -7,7 +7,7 @@ Los conjuntos de datos deben estar a un clic de distancia de los usuarios. Por e
 
 Para lo anterior, se recomeienda cargar los conjuntos de datos abiertos en un servidor web, ya sea el mismo portal en línea con el que se cuente, o servidores de archivos propios o en la nube. Se recomienda cargar las ligas descargables a los archivos (o hacer referencia) en la sección de datos abiertos en la pestaña de Transparencia Focalizada o en la dirección www.institucion.gob.mx/datos.
 
-#### checklist
+#### actividades
 1. Haz disponibles los datos en línea para descarga.
 2. Facilitar la descarga, segmentando y comprimiendo los archivos.
 
