--- a/_plays/09.md
+++ b/_plays/09.md
@@ -13,7 +13,7 @@ Al cargar el catálogo de datos de la institución en formato CSV, se traducirá
 
 Las mejores prácticas de la comunidad internacional de datos abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. En [datos.gob.mx](http://datos.gob.mx) concentramos una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx) tu institución se suma a una iniciativa nacional.
 
-#### checklist
+#### actividades
 1. Pide acceso en [ADELA](http://adela.datos.gob.mx). 
 2. Sube el catálogo de datos.
 3. Revisa que el catálogo esté reflejado en [datos.gob.mx](http://datos.gob.mx).
