--- a/_plays/11.md
+++ b/_plays/11.md
@@ -11,6 +11,6 @@ Usar las herramientas en código abierto disponibles en datos.gob.mx. Esta plata
 * presupuesto abierto
 * visualizaciones interactivas
 
-#### checklist
+#### actividades
 1. Utiliza las [herramientas](http://datos.gob.mx/herramientas/) para promocionar el uso y aprovechamiento de tu catálogo de datos abiertos.
 
