--- a/_plays/13.md
+++ b/_plays/13.md
@@ -7,7 +7,7 @@ Hacer que los datos sean abiertos y accesibles en un formato estándar, legible 
 
 En [datos.gob.mx](http://datos.gob.mx) se presentarán casos de éxito públicos y cívicos.
 
-#### checklist
+#### actividades
 1. Promueve casos de éxito que inspiren al uso y aprovechamiento de
    datos abiertos.
 2. Publica una historia en [datos.gob.mx](http://datos.gob.mx).
