--- a/_plays/14.md
+++ b/_plays/14.md
@@ -7,7 +7,7 @@ El tablero te permitirá tener saber cuáles son tus bases de datos más descarg
 
 La mejora constante en la calidad y publicación de datos abiertos es una constante en las iniciativas de datos abiertos a nivel internacional. La retroalimentación específica de los usuarios, el Escuadrón de Datos Abiertos, la Unidad de Gobierno DIgital y la CEDN pueden ser los mecanismos más imporntates para incorporar al Plan de Apertura Anual de la Institución.
 
-#### checklist
+#### actividades
 1. Revisa el tablero de control en [ADELA](http://adela.datos.gob.mx).
    datos abiertos.
 2. Atiende la retroalimentación recibida.
