--- a/_plays/04.md
+++ b/_plays/04.md
@@ -7,7 +7,7 @@ La consolidación de datos prioritarios permitirá la automatización de diversa
 
 La calendarización es importante para permitir la planeación y actividades que podrán realizar con nuevos activos a su disposición, así como por ser un ejercicio de transparencia.
 
-#### checklist
+#### actividades
 1. Consolida una lista priorizada de conjuntos de datos.
 2. Define fechas de publicación para los conjuntos de datos.
 
