--- a/_plays/10.md
+++ b/_plays/10.md
@@ -7,7 +7,7 @@ Los Datos Abiertos es un tema nuevo en México. Por lo anterior, es importante d
 
 El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjutno. Datos.gob.mx, tendrá mecanismos de interacción para fomentar este diálogo.
 
-#### checklist
+#### actividades
 1. Comunica al interior.
 2. Comunica al exterior.
 3. Responde a tus usuarios.
