Fixes typos, add links

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -6,7 +6,7 @@ title: Forma un equipo de trabajo
 Se comenzará por designar a los dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos, el Enlace Institucional y el Administrador de Datos Abiertos.
 
 * El Enlace coordinará las acciones de datos abiertos y encausará su uso como herramienta para cumplir objetivos de la institución.
-* El Administrador coordinará la creación del Inventario de Datos e implementará los procesos tecnológicos para que los datos de la institución se vean reflejados en datos.gob.mx
+* El Administrador coordinará la creación del [Inventario de Datos](#play2) e implementará los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
 
 Estos servidores públicos serán encargados de coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
 
