--- a/_plays/03.md
+++ b/_plays/03.md
@@ -6,9 +6,9 @@ title: Prioriza los datos de valor
 La priorizacion de Datos Abiertos está ligada al valor que se puede extraer de los mismos mediante su uso. Por lo anterior, existen cuatro pasos para priorizar los datos que serán publicados como Datos Abiertos:
 
 * Conocer la demanda ciudadana de datos, para lo que la Unidad de Transparencia es el mecanismo más importante.
-* El cumplimiento con los objetivos del Plan Nacional de Desarrollo, por lo que el Comité Institucional de Datos Abiertos invitará a los coordinaciones de asesores para tomar una decisión informada sobre que datos abiertos son prioritarios para la institución en base a sus objetivos, políticas y programas prioritarios.
+* El cumplimiento con los objetivos del Plan Nacional de Desarrollo, por lo que el Comité Institucional de Datos Abiertos invitará a los coordinaciones de asesores para tomar una decisión informada sobre qué datos abiertos son prioritarios para la institución en base a sus objetivos, políticas y programas prioritarios.
 * Aquellos datos que se sepa son de alto valor para los sectores interesados, ligados a la institución.
-* Aquellos datos ligados o recomendados por la Infraestructura Estratégica de Datos Abiertos.
+* Aquellos datos ligados o recomendados por la [Infraestructura Estratégica de Datos](#).
 
 #### actividades
 1. Elabora reporte de datos más solicitados con la Unidad de
