--- a/_plays/05.md
+++ b/_plays/05.md
@@ -6,5 +6,5 @@ title: Publica tu Plan de Apertura
 Los pasos anteriores, juntos, conformarán el Plan de Apertura de la institución, que será publicado con el objetivo de señalar al público lo que puede esperar en materia de datos abiertos, así como para dar a conocer expectativas razonables respecto a la publicación de los mismos.
 
 #### actividades
-1. Publica el Plan de Apertura en [ADELA](http://adela.datos.gob.mx/)
+1. Publica el Plan de Apertura en [ADELA](http://adela.datos.gob.mx/).
 
