--- a/_plays/10.md
+++ b/_plays/10.md
@@ -5,7 +5,7 @@ title: Socializa el Plan de Acción
 
 Los Datos Abiertos es un tema nuevo en México. Por lo anterior, es importante dar a conocer qué son los datos abiertos y el [valor](http://datos.gob.mx/historias/) que estos pueden tener para el desarrollo económico, social y generar lograr más fácilmente los objetivos prioritarios de la institución tanto dentro, como fuera del gobierno.
 
-El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjutno. Datos.gob.mx, tendrá mecanismos de interacción para fomentar este diálogo.
+El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjunto. La plataforma [datos.gob.mx](http://datos.gob.mx) tiene mecanismos de interacción para fomentar este diálogo.
 
 #### actividades
 1. Comunica al interior.
