--- a/_plays/11.md
+++ b/_plays/11.md
@@ -3,13 +3,11 @@ id: 11
 title: Aprovecha las herramientas abiertas
 ---
 
-La iniciativa de Datos Abiertos busca fomentar la interoperabilidad, escalabilidad y réplica de las [herramientas](http://datos.gob.mx/herramientas/) de uso de datos abiertos, como mapas y gráficas estadísticas. El uso de las herramientas genéricas para la APF y el público, nos permitirá ahorrar recursos y fomentar desarrollos tecnológicos una sóla vez, y para toda la APF.
+La Iniciativa de Datos Abiertos busca fomentar la interoperabilidad, escalabilidad y réplica de las [herramientas](http://datos.gob.mx/herramientas/) de uso de datos abiertos, como mapas y gráficas estadísticas. El uso de las herramientas genéricas para la APF y el público, nos permitirá ahorrar recursos y fomentar desarrollos tecnológicos una sóla vez, y para toda la APF. Esta plataforma será actualizada constantemente y con nuevas herramientas como:
 
-Usar las herramientas en código abierto disponibles en datos.gob.mx. Esta plataforma será actualizada constantemente y con nuevas herramientas como:
-
-* visualizador cartográfico universal
-* presupuesto abierto
-* visualizaciones interactivas
+* un visualizador cartográfico universal
+* herramientas para el presupuesto abierto
+* visualizaciones interactivas para explorar los datos
 
 #### actividades
 1. Utiliza las [herramientas](http://datos.gob.mx/herramientas/) para promocionar el uso y aprovechamiento de tu catálogo de datos abiertos.
