--- a/_plays/12.md
+++ b/_plays/12.md
@@ -3,16 +3,16 @@ id: 12
 title: Promueve el uso
 ---
 
-Tu institución, tras publicar datos, está haciendo más fácil encontrar, utilizar y reutilizar información gubernamental para: inspirar nuevas ideas, transparentar su función, estimular el crecimiento económico y hacer que los procesos dentro de su dependencia se vuelvan más eficientes y baratos. Organizar eventos que promueven el uso de datos abiertos para la generación de soluciones digitales, propuestas de política pública y nuevos emprendimientos es esencial para la mejora continua.
+Tu institución, tras publicar datos, está haciendo más fácil encontrar, utilizar y reutilizar información gubernamental para inspirar nuevas ideas, transparentar su función, estimular el crecimiento económico y hacer que los procesos dentro de tu dependencia se vuelvan más eficientes y baratos. Organizar eventos que promueven el uso de datos abiertos para la generación de soluciones digitales, propuestas de política pública y nuevos emprendimientos es esencial para la mejora continua.
 
 Realiza algunas de las siguientes actividades, para las cuales la CEDN publicará las metodologías y herramientas necesarias:
 
-* Datatón
+* [Datatón](http://dataton.datos.gob.mx/)
 * [Retos Públicos](http://retos.gob.mx/)
 * Datos para el Desarrollo (proyectos de investigación)
 * Interacción directa con los usuarios
 * [Foros](http://foro.datos.gob.mx/) o comunidades en línea
 
 #### actividades
-1. Organiza y lanza eventos y plataformas colaborativas que utilicen datos abiertos.
+1. Organiza eventos y plataformas colaborativas que utilicen datos abiertos.
 
