--- a/_plays/13.md
+++ b/_plays/13.md
@@ -3,7 +3,7 @@ id: 13
 title: Promueve casos de éxito
 ---
 
-Hacer que los datos sean abiertos y accesibles en un formato estándar, legible por máquina por defecto puede aumentar la productividad y ahorro de costos de las dependendencias, entidades y empresas productivas del Estado. Al realizar un análisis de costo-beneficio para determinar si y en qué medida a modificar los conjuntos de datos y los sistemas existentes de acuerdo con las recomendaciones de la presente nota, considere que los benefiios son buenas historias que deben de ser comunicadas para reforzar la visibilidad y éxito de su Plan de Apertura.
+Hacer que los datos sean abiertos por defecto y accesibles en un formato estándar, legible por máquina, puede aumentar la productividad y ahorro de costos de las dependencias, entidades y empresas productivas del Estado. Al realizar un análisis de costo-beneficio sobre la medida en qué los datos abiertos han generado beneficio, es conveniente narrar historias que deben de ser comunicadas para reforzar la visibilidad y éxito de su Plan de Apertura.
 
 En [datos.gob.mx](http://datos.gob.mx) se presentarán casos de éxito públicos y cívicos.
 
