--- a/_plays/14.md
+++ b/_plays/14.md
@@ -3,9 +3,9 @@ id: 14
 title: Sigue el tablero de mejora continua
 ---
 
-El tablero te permitirá tener saber cuáles son tus bases de datos más descargadas, fechas y horas pico de descarga y toda la información relevante para mejorar tu Plan y Calendario de apertura. También podrás ver y entender el avance de las demás instituciones, lo que te permitirá dar seguimiento a tu Plan de APertura, compar tu desempeño con el resto de la APF y mejorarlo.
+El tablero te permitirá tener saber cuáles son tus bases de datos más descargadas, fechas y horas pico de descarga y toda la información relevante para mejorar tu [Plan de Apertura](#play5) y [calendario de publicación](#play4). También podrás ver y entender el avance de las demás instituciones, lo que te permitirá dar seguimiento a tu [Plan de Apertura](#play5), comparar tu desempeño con el resto de la APF y mejorarlo.
 
-La mejora constante en la calidad y publicación de datos abiertos es una constante en las iniciativas de datos abiertos a nivel internacional. La retroalimentación específica de los usuarios, el Escuadrón de Datos Abiertos, la Unidad de Gobierno DIgital y la CEDN pueden ser los mecanismos más imporntates para incorporar al Plan de Apertura Anual de la Institución.
+La mejora constante en la calidad y publicación de datos abiertos es una constante en las iniciativas de datos abiertos a nivel internacional. La retroalimentación específica de los usuarios, el Escuadrón de Datos Abiertos, la Unidad de Gobierno Digital y la CEDN pueden ser los mecanismos más importantes para incorporar al Plan de Apertura Anual de la Institución.
 
 #### actividades
 1. Revisa el tablero de control en [ADELA](http://adela.datos.gob.mx).
