--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,19 +1,19 @@
 ---
 id: 1
 title: Forma un equipo de trabajo
+published: true
 ---
 
-Se comenzará por designar a los dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos, el Enlace Institucional y el Administrador de Datos Abiertos.
+Se comenzará por designar a dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos, el Enlace Institucional y el Administrador de Datos Abiertos.
 
-* El Enlace coordinará las acciones de datos abiertos y encausará su uso como herramienta para cumplir objetivos de la institución.
-* El Administrador coordinará la creación del [Inventario de Datos](#play2) e implementará los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
+* El Enlace será el coordinador de asesores del titular de la institución u homólogo, y será responsable de coordinar y encausar las acciones de Datos Abiertos y su uso como herramientas para cumplir objetivos de la institución.
+* El Administrador será el DFTI de la institución u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](#play2) e implementar los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
 
-Estos servidores públicos serán encargados de coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
+Estos servidores públicos serán encargados de crear y coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
 
-#### actividades
+#### Actividades a realizar
 1. Designa un enlace institucional
 2. Designa un administrador de datos abiertos
 3. Envia un oficio con la designación a la Estrategia Digital Nacional,
    siguiendo [esta plantilla](https://docs.google.com/document/d/1zTDpf0oW9ooxo2v1W5nQv5ZHAeFL0ss5_6fvhzeGG9g/edit?usp=sharing).
-4. Reúne a un Comité Institucional de Datos Abiertos.
-
+4. Reúne a un Comité Institucional de Datos Abiertos para coordinar la implementación de la Política en toda la institución.
