--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,14 +1,14 @@
 ---
 id: 2
 title: Crea un Inventario General de Datos
+published: true
 ---
 
 El inventario general de datos permite a la institución saber con qué activos de datos cuenta, así como explorar áreas de oportunidad para utilizarlos en el cumplimiento de sus objetivos. También permite identificar duplicidades, eficientar recursos y conocer la ubicación de los datos.
 
-Es importante a que se inicie un versionamiento del Inventario General de Datos de la entidad. En la primera iteración se debe apuntar a tener un ejercicio exhaustivo, que se irá incrementando y perfeccionando de manera gradual.
+El Inventario General de Datos será construido de manera gradual, apuntando a que el primer ejercicio sea exhaustivo.
 
-#### actividades
+#### Actividades a realizar
 1. Pide un [Inventario General de Datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas.
 2. Consolida la información recolectada en un solo archivo, siguiendo
    [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
-
