--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,21 +1,17 @@
 ---
 id: 3
 title: Prioriza los datos de valor
+published: true
 ---
 
-La priorizacion de Datos Abiertos está ligada al valor que se puede extraer de los mismos mediante su uso. Por lo anterior, existen cuatro pasos para priorizar los datos que serán publicados como Datos Abiertos:
+La priorizacion de Datos Abiertos es importante para saber qué datos empezar a publicar y cuáles tienen más valor para el gobierno y la ciudadanía. Para la publicación de datos, las instituciones deberán seguir los siguientes pasos: 
 
-* Conocer la demanda ciudadana de datos, para lo que la Unidad de Transparencia es el mecanismo más importante.
-* El cumplimiento con los objetivos del Plan Nacional de Desarrollo, por lo que el Comité Institucional de Datos Abiertos invitará a los coordinaciones de asesores para tomar una decisión informada sobre qué datos abiertos son prioritarios para la institución en base a sus objetivos, políticas y programas prioritarios.
-* Aquellos datos que se sepa son de alto valor para los sectores interesados, ligados a la institución.
-* Aquellos datos ligados o recomendados por la [Infraestructura Estratégica de Datos](#).
+* Incluir aquellos conjuntos de datos solicitados anualmente mediante la [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050)
+* Conocer la demanda ciudadana de datos, por ejemplo mediante las solicitudes de acceso a la información más recurrentes, aquellos que se sepa son de alto valor mediante las interacciones diarias de las instituciones con sus sectores interesados y el uso de mecanismos de participación ciudadana institucionales.
+* El cumplimiento con los objetivos del Plan Nacional de Desarrollo, por lo que el Comité Institucional de Datos Abiertos invitará a los coordinaciones de asesores para tomar una decisión informada sobre qué Datos Abiertos son prioritarios para la institución en base a sus objetivos, políticas y programas más relevantes.
 
-#### actividades
-1. Elabora reporte de datos más solicitados con la Unidad de
-   Transparencia.
-2. Sesiona el Comité Institucional de Datos Abiertos para priorizar los
-   datos a publicarse como datos abiertos.
-3. Sigue el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050), así como el reporte de transparencia para definir una lista priorizada de datos para abrir.
-4. Documenta los mecanismos de participación ciudadana actuales y en
-   desarrollo.
-
+#### Actividades a realizar
+1. Utiliza el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
+2. Solicita a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública más recurrentes.
+3. Sesionar el Comité Institucional de Datos Abiertos para priorizar los detos del Inventario General según los objetivos de la institución y el PND.
+4. Utiliza los mecanismos de participación ciudadana para conocer qué datos podrían utilizar los sectores interesados.
