--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,13 +1,15 @@
 ---
 id: 4
 title: Crea un calendario de publicación
+published: true
 ---
 
 La consolidación de datos prioritarios permitirá la automatización de diversas etapas posteriores como revisión de calidad, calendarización, publicación y actualización.
 
 La calendarización es importante para permitir la planeación y actividades que podrán realizar con nuevos activos a su disposición, así como por ser un ejercicio de transparencia.
 
-#### actividades
+Siguiendo el principio de rendición de cuentas, este Calendario deberá incluir mención a aquellos conjuntos de datos que no pueden hacerse públicos junto con la razón justificada para no hacerlo.
+
+#### Actividades a realizar
 1. Consolida una lista priorizada de conjuntos de datos.
 2. Define fechas de publicación para los conjuntos de datos.
-
