--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,12 +1,14 @@
 ---
 id: 8
 title: Documenta los conjuntos de datos
+published: true
 ---
 
 Utilizar datos no debería ser confuso para el usuario. Es importante explicar de dónde vienen los datos y al menos compartir referencias adicionales para entender más a fondo el origen de éstos.
 
-Todo esto se captura en los metadatos de cada uno de los conjuntos de datos.
+Todo esto se captura en los metadatos (definidos como aquellos datos que describen otros datos) con formato [DCAT](http://www.w3.org/TR/vocab-dcat/), para que cada uno de los conjuntos que serán pulbicados como Datos Abiertos.
 
-#### actividades
-1. Documentar cada uno de los conjuntos de datos con los metadatos bajo [DCAT](http://www.w3.org/TR/vocab-dcat/). Sigue la guía para documentar metadatos usando DCAT disponible en [bit.ly/inventario-de-datos-v2](http://bit.ly/inventario-de-datos-v2). El producto final será un CSV con la documentación de todos los conjuntos de datos a publicar.
+El producto final será un archivo CSV con la documentación de todos los conjuntos de datos a publicar.
 
+#### Actividades a realizar
+1. Sigue la guía para documentar metadatos usando DCAT disponible en [bit.ly/inventario-de-datos-v2](http://bit.ly/inventario-de-datos-v2). 
