--- a/_plays/07.md
+++ b/_plays/07.md
@@ -12,6 +12,6 @@ Cada conjunto de datos debe estar disponible para descargar individualmente medi
 
 La importancia de lo anterior es que estas ligas serán utilizadas posteriormente para referenciar los conjuntos de datos en www.datos.gob.mx
 
-#### actividades
+#### Actividades a realizar
 1. Habilita los conjuntos de datos para que estén disponibles direcramente para descarga en www.institución.gob.mx/datos
 2. Facilitar la descarga, segmentando y comprimiendo los archivos mayores a 100 MB (utilizando formatos abiertos como gzip).
