--- a/_plays/09.md
+++ b/_plays/09.md
@@ -1,20 +1,17 @@
 ---
 id: 9
 title: Publica el catálogo de datos abiertos en datos.gob.mx
+published: true
 ---
 
 El catálogo generado en el paso anterior se cargará en
-[ADELA](http://adela.datos.gob.mx) para ser publicado en
-[datos.gob.mx](http://datos.gob.mx).
-
-[ADELA](http://adela.datos.gob.mx) tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento.
+[ADELA](http://adela.datos.gob.mx). ADELA tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento (Los lineamientos a fondo sobre cómo funciona ADELA y cómo realizar estos pasos están disponibles en (https://github.com/mxabierto/adela/wiki/Gu%C3%ADa-de-uso-para-el-funcionario)
 
 Al cargar el catálogo de datos de la institución en formato CSV, se traducirá automáticamente al estándar DCAT en formato JSON. Además se registrará un histórico de catálogos, y se proveerá de ayuda y guía a los funcionarios responsables.
 
-Las mejores prácticas de la comunidad internacional de datos abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. En [datos.gob.mx](http://datos.gob.mx) concentramos una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx) tu institución se suma a una iniciativa nacional.
+Las mejores prácticas de la comunidad internacional de Datos Abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. En [datos.gob.mx](http://datos.gob.mx) concentramos una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx) tu institución se suma a una iniciativa nacional.
 
 #### actividades
-1. Pide acceso en [ADELA](http://adela.datos.gob.mx). 
+1. Pide acceso en [ADELA](http://adela.datos.gob.mx) escribiendo a: adela@datos.gob.mx. Este correo tendrá como respuesta un nombre de usuario y contaseña para acceder a la aplicación web. 
 2. Sube el catálogo de datos.
 3. Revisa que el catálogo esté reflejado en [datos.gob.mx](http://datos.gob.mx).
-
