--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,14 +1,14 @@
 ---
 id: 10
 title: Socializa el Plan de Acción
+published: true
 ---
 
-Los Datos Abiertos es un tema nuevo en México. Por lo anterior, es importante dar a conocer qué son los datos abiertos y el [valor](http://datos.gob.mx/historias/) que estos pueden tener para el desarrollo económico, social y generar lograr más fácilmente los objetivos prioritarios de la institución tanto dentro, como fuera del gobierno.
+Los Datos Abiertos es un tema nuevo en México. Por lo anterior, es importante dar a conocer qué son los Datos Abiertos, el Pland e Apertura de la institución y el [valor](http://datos.gob.mx/historias/) que estos pueden tener para el desarrollo económico y social de México.
 
 El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjunto. La plataforma [datos.gob.mx](http://datos.gob.mx) tiene mecanismos de interacción para fomentar este diálogo.
 
 #### actividades
 1. Comunica al interior.
 2. Comunica al exterior.
-3. Responde a tus usuarios.
-
+3. Responde a los usuarios de los datos que envíen comentarios directamente a los responsables de los conjuntos de datos, sobre las razones, tiempo o posibilidad de publicar un conjunto de datos que sea requerido, o sobre la calidad y significado de los datos publicados.
