--- a/_plays/11.md
+++ b/_plays/11.md
@@ -1,14 +1,15 @@
 ---
 id: 11
 title: Aprovecha las herramientas abiertas
+published: true
 ---
 
-La Iniciativa de Datos Abiertos busca fomentar la interoperabilidad, escalabilidad y réplica de las [herramientas](http://datos.gob.mx/herramientas/) de uso de datos abiertos, como mapas y gráficas estadísticas. El uso de las herramientas genéricas para la APF y el público, nos permitirá ahorrar recursos y fomentar desarrollos tecnológicos una sóla vez, y para toda la APF. Esta plataforma será actualizada constantemente y con nuevas herramientas como:
+La Iniciativa de Datos Abiertos busca fomentar la interoperabilidad, escalabilidad y réplica de las [herramientas](http://datos.gob.mx/herramientas/) de uso de Datos Abiertos, como mapas y gráficas estadísticas. El uso de las herramientas genéricas para la APF y el público nos permitirá ahorrar recursos y fomentar desarrollos tecnológicos una sóla vez, y para toda la APF. Esta plataforma será actualizada constantemente y con nuevas herramientas como:
 
-* un visualizador cartográfico universal
-* herramientas para el presupuesto abierto
-* visualizaciones interactivas para explorar los datos
+* Un visualizador cartográfico universal
+* Herramientas para el presupuesto abierto
+* Visualizaciones interactivas para explorar los datos
 
-#### actividades
-1. Utiliza las [herramientas](http://datos.gob.mx/herramientas/) para promocionar el uso y aprovechamiento de tu catálogo de datos abiertos.
-
+#### Actividades a realizar
+1.	Definir objetivos prioritarios específicos de la institución y los Datos Abiertos que podrían utilizarse para apoyar su cumplimiento.
+2.	Utiliza las herramientas para promocionar el uso y aprovechamiento de tu catálogo de Datos Abiertos.
