--- a/_plays/10.md
+++ b/_plays/10.md
@@ -8,7 +8,7 @@ Los Datos Abiertos es un tema nuevo en México. Por lo anterior, es importante d
 
 El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjunto. La plataforma [datos.gob.mx](http://datos.gob.mx) tiene mecanismos de interacción para fomentar este diálogo.
 
-#### actividades
+#### Actividades a realizar
 1. Comunica al interior.
 2. Comunica al exterior.
 3. Responde a los usuarios de los datos que envíen comentarios directamente a los responsables de los conjuntos de datos, sobre las razones, tiempo o posibilidad de publicar un conjunto de datos que sea requerido, o sobre la calidad y significado de los datos publicados.
