--- a/_plays/09.md
+++ b/_plays/09.md
@@ -11,7 +11,7 @@ Al cargar el catálogo de datos de la institución en formato CSV, se traducirá
 
 Las mejores prácticas de la comunidad internacional de Datos Abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. En [datos.gob.mx](http://datos.gob.mx) concentramos una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx) tu institución se suma a una iniciativa nacional.
 
-#### actividades
+#### Actividades a realizar
 1. Pide acceso en [ADELA](http://adela.datos.gob.mx) escribiendo a: adela@datos.gob.mx. Este correo tendrá como respuesta un nombre de usuario y contaseña para acceder a la aplicación web. 
 2. Sube el catálogo de datos.
 3. Revisa que el catálogo esté reflejado en [datos.gob.mx](http://datos.gob.mx).
