--- a/_plays/13.md
+++ b/_plays/13.md
@@ -8,7 +8,7 @@ Hacer que los datos sean abiertos por defecto y accesibles en un formato estánd
 
 En [datos.gob.mx](http://datos.gob.mx) se presentarán casos de éxito públicos y cívicos.
 
-#### actividades
+#### Actividades a realizar
 1. Documenta y promueve casos de éxito que inspiren al uso y aprovechamiento de
    Datos Abiertos.
 2. Publica una historia en [datos.gob.mx](http://datos.gob.mx).
