--- a/_plays/03.md
+++ b/_plays/03.md
@@ -13,5 +13,5 @@ La priorizacion de Datos Abiertos es importante para saber qué datos empezar a 
 #### Actividades a realizar
 1. Utiliza el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
 2. Solicita a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública más recurrentes.
-3. Sesionar el Comité Institucional de Datos Abiertos para priorizar los detos del Inventario General según los objetivos de la institución y el PND.
+3. Sesionar el Comité Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el PND.
 4. Utiliza los mecanismos de participación ciudadana para conocer qué datos podrían utilizar los sectores interesados.
