--- a/_plays/09.md
+++ b/_plays/09.md
@@ -5,7 +5,7 @@ published: true
 ---
 
 El catálogo generado en el paso anterior se cargará en
-[ADELA](http://adela.datos.gob.mx). ADELA tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento (Los lineamientos a fondo sobre cómo funciona ADELA y cómo realizar estos pasos están disponibles [aquí](https://github.com/mxabierto/adela/wiki/Gu%C3%ADa-de-uso-para-el-funcionario)
+[ADELA](http://adela.datos.gob.mx). ADELA tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento (Los lineamientos a fondo sobre cómo funciona ADELA y cómo realizar estos pasos están disponibles [aquí](https://github.com/mxabierto/adela/wiki/Gu%C3%ADa-de-uso-para-el-funcionario))
 
 Al cargar el catálogo de datos de la institución en formato CSV, se traducirá automáticamente al estándar DCAT en formato JSON. Además se registrará un histórico de catálogos, y se proveerá de ayuda y guía a los funcionarios responsables.
 
