--- a/_plays/01.md
+++ b/_plays/01.md
@@ -7,7 +7,7 @@ published: true
 Se comenzará por designar a dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos, el Enlace Institucional y el Administrador de Datos Abiertos.
 
 * El Enlace será el coordinador de asesores del titular de la institución u homólogo, y será responsable de coordinar y encausar las acciones de Datos Abiertos y su uso como herramientas para cumplir objetivos de la institución.
-* El Administrador será el DFTI de la institución u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](#play2) e implementar los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
+* El Administrador será el Director General de Tecnologías de la Información de la institución u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](#play2) e implementar los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
 
 Estos servidores públicos serán encargados de crear y coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
 
