Add bolds and links to paso-1

--- a/_activities/01b.md
+++ b/_activities/01b.md
@@ -5,11 +5,11 @@ title: Crear un inventario general de datos
 published: true
 ---
 
-Involucrados: Enlace de Datos Abiertos; Administrador de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
+**Involucrados:** Enlace de Datos Abiertos; Administrador de Datos Abiertos; áreas generadoras o administradoras de datos; enlace de transparencia; Organos Internos de Control.
 
-Tiempo máximo para el cumplimiento: 60 días
+**Tiempo máximo para el cumplimiento:** 60 días
 
-Normatividad a la que  se da cumplimiento: Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
+**Normatividad a la que  se da cumplimiento:** Decreto de Datos Abiertos; Índice de Datos Abiertos del PGcyM.
 
 El inventario general de datos permite saber la totalidad de los inventarios de datos con los que cuenta la institución, y es un ejercicio de transparencia y rendición de cuentas hacia los ciudadanos, permitiéndoles saber cuáles son los datos que genera y administra cada institución.
 
@@ -19,5 +19,5 @@ Para su conformación, las áreas responsables de generar o administrar datos de
 
 ### _Actividades a realizar_
 
-1. Pedir un inventario general de datos a todas las áreas responsables de generar o administrar datos y consolidar información en un solo listado, siguiendo este formato.
+1. Pedir un [inventario general de datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas responsables de generar o administrar datos y consolidar información en un solo listado, siguiendo [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
 
