Update plays, reducing text

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,19 +1,11 @@
 ---
 id: 1
-title: Forma un equipo de trabajo
+title: Planea | Desarrollar y publicar el Plan de Apertura institucional
 published: true
 ---
 
-Se comenzará por designar a dos funcionarios responsables de dar cumplimiento al Decreto de Datos Abiertos, el Enlace Institucional y el Administrador de Datos Abiertos.
+#### _Actividades a realizar_
 
-* El Enlace será el coordinador de asesores del titular de la institución u homólogo, y será responsable de coordinar y encausar las acciones de Datos Abiertos y su uso como herramientas para cumplir objetivos de la institución.
-* El Administrador será el Director General de Tecnologías de la Información de la institución u homólogo, y será responsable de coordinar la creación del [Inventario de Datos](#play2) e implementar los procesos tecnológicos para que los datos de la institución se vean reflejados en [datos.gob.mx](http://datos.gob.mx).
-
-Estos servidores públicos serán encargados de crear y coordinar el Comité Institucional de Datos Abiertos, un grupo más amplio de áreas ligadas a la publicación de datos abiertos en la institución para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y que incluye al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
-
-#### Actividades a realizar
-1. Designa un enlace institucional
-2. Designa un administrador de datos abiertos
-3. Envia un oficio con la designación a la Estrategia Digital Nacional,
-   siguiendo [esta plantilla](https://docs.google.com/document/d/1zTDpf0oW9ooxo2v1W5nQv5ZHAeFL0ss5_6fvhzeGG9g/edit?usp=sharing).
-4. Reúne a un Comité Institucional de Datos Abiertos para coordinar la implementación de la Política en toda la institución.
+a. Formar un equipo de trabajo
+b. Crear un inventario general de datos
+c. Priorizar los datos de valor
