--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,17 +1,5 @@
 ---
 id: 3
-title: Prioriza los datos de valor
+title: Perfecciona | Avanzar en la madurez de los datos abiertos
 published: true
 ---
-
-La priorizacion de Datos Abiertos es importante para saber qué datos empezar a publicar y cuáles tienen más valor para el gobierno y la ciudadanía. Para la publicación de datos, las instituciones deberán seguir los siguientes pasos: 
-
-* Incluir aquellos conjuntos de datos solicitados anualmente mediante la [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050)
-* Conocer la demanda ciudadana de datos, por ejemplo mediante las solicitudes de acceso a la información más recurrentes, aquellos que se sepa son de alto valor mediante las interacciones diarias de las instituciones con sus sectores interesados y el uso de mecanismos de participación ciudadana institucionales.
-* El cumplimiento con los objetivos del Plan Nacional de Desarrollo, por lo que el Comité Institucional de Datos Abiertos invitará a los coordinaciones de asesores para tomar una decisión informada sobre qué Datos Abiertos son prioritarios para la institución en base a sus objetivos, políticas y programas más relevantes.
-
-#### Actividades a realizar
-1. Utiliza el modelo de [Infraestructura Estratégica de Datos](https://docs.google.com/presentation/d/1aSHpv08XNrdc_oxzyoY7wS23yYwxGIDeaqF7sFQoKiU/edit#slide=id.g4a4fba72d_050) para conocer que atribuciones dan más valor a los datos, y los conjuntos de datos que deberán ser publicados primero.
-2. Solicita a la Unidad de Transparencia un reporte de las solicitudes de acceso a la información pública más recurrentes.
-3. Sesionar el Comité Institucional de Datos Abiertos para priorizar los datos del Inventario General según los objetivos de la institución y el PND.
-4. Utiliza los mecanismos de participación ciudadana para conocer qué datos podrían utilizar los sectores interesados.
