--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,14 +1,12 @@
 ---
 id: 2
-title: Crea un Inventario General de Datos
+title: Publica | Dar las características de datos abiertos
 published: true
 ---
 
-El inventario general de datos permite a la institución saber con qué activos de datos cuenta, así como explorar áreas de oportunidad para utilizarlos en el cumplimiento de sus objetivos. También permite identificar duplicidades, eficientar recursos y conocer la ubicación de los datos.
+#### _Actividades a realizar_
 
-El Inventario General de Datos será construido de manera gradual, apuntando a que el primer ejercicio sea exhaustivo.
-
-#### Actividades a realizar
-1. Pide un [Inventario General de Datos](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing) a todas las áreas.
-2. Consolida la información recolectada en un solo archivo, siguiendo
-   [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
+a. Preparar los conjuntos de datos
+b. Publicar los Datos Abiertos en tu página institucional
+c. Documentar los conjuntos de Datos Abiertos
+d. Publicar el Catálogo de Datos Abiertos en datos.gob.mx
